# hyperion

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CompileHowto.txt  CompileOnOrangepi.md  HyperionConfig.h.in  PULL_REQUEST_TEMPLATE  README.md  build.sh  hyperiond.test-binary
cmake/: packages.cmake
cmake/debian/: postinst
cmake/rpm/: postinst
config/: hyperion.config.json  hyperion.config.json.example  hyperion.config.json.piblaster.4  hyperion_x86.config.json
dependencies/: CMakeLists.txt
deploy/: hyperiond
deploy/pi-blaster-test/: hyperion.config.json.piblaster.4  pi-blaster
effects/: clock-gd.py  clock-hands.json  clock-pie.json  clock.py  udp.json  xmas2.json  xmas2.py
include/blackborder/: BlackBorderDetector.h  BlackBorderProcessor.h
include/effectengine/: ActiveEffectDefinition.h  EffectEngine.h
include/grabber/: OpenCVGrabber.h  OpenCVWrapper.h  X11Grabber.h
include/hyperion/: Hyperion.h  ImageProcessor.h  ImageProcessorFactory.h
include/utils/: ColorAdjustment.h  Image.h  ImageResampler.h  Profiler.h  VideoMode.h
include/webconfig/: WebConfig.h
include/xbmcvideochecker/: XBMCVideoChecker.h
libsrc/: CMakeLists.txt
libsrc/blackborder/: BlackBorderDetector.cpp  BlackBorderProcessor.cpp
libsrc/boblightserver/: BoblightClientConnection.cpp
libsrc/bonjour/: CMakeLists.txt
libsrc/effectengine/: Effect.cpp  Effect.h  EffectEngine.cpp
libsrc/grabber/: CMakeLists.txt
libsrc/grabber/opencv/: CMakeLists.txt  OpenCVGrabber.cpp  OpenCVWrapper.cpp
libsrc/hyperion/: Hyperion.cpp  (+7 more)
test/: TestBlackBorderProcessor.cpp
(+55 files in other folders)
